--- a/grehpravesh.html
+++ b/grehpravesh.html
@@ -238,7 +238,7 @@
         <h2>Greh Pravesh Ceremony</h2>
         <div class="decoration"></div>
         <p>We are excited to welcome you to our new home!</p>
-        <p class="date-time">📅 Date: 10th December 2025</p>
+        <p class="date-time">📅 Date: 22 may 2025</p>
         <p class="venue">📍 Venue: Kharunia Bagicha, Near Transforma, Agam Kuaa</p>
         <div class="schedule">
             <strong>Schedule of Events:</strong><br>
